--- a/backend/package.json
+++ b/backend/package.json
@@ -10,12 +10,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "morgan": "^1.10.0",
+    "superagent": "^8.0.9"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/morgan": "^1.9.4",
     "@types/node": "^18.13.0",
+    "@types/superagent": "^4.1.16",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
   }
