--- a/backend/package.json
+++ b/backend/package.json
@@ -13,12 +13,14 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "morgan": "^1.10.0",
     "superagent": "^8.0.9"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/express-session": "^1.17.5",
     "@types/morgan": "^1.9.4",
     "@types/node": "^18.13.0",
     "@types/superagent": "^4.1.16",
